WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
200187
REGRESSION (
r246899
): Subtitles show twice when controls show/hide on hulu.com
https://bugs.webkit.org/show_bug.cgi?id=200187
Summary
REGRESSION (r246899): Subtitles show twice when controls show/hide on hulu.com
Simon Fraser (smfr)
Reported
2019-07-26 18:34:06 PDT
REGRESSION (
r246899
): Subtitles show twice when controls show/hide on hulu.com
Attachments
Patch
(10.56 KB, patch)
2019-07-26 18:39 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2019-07-26 18:39:15 PDT
Created
attachment 375008
[details]
Patch
Simon Fraser (smfr)
Comment 2
2019-07-26 18:39:17 PDT
<
rdar://problem/53511121
>
WebKit Commit Bot
Comment 3
2019-07-29 11:37:56 PDT
Comment on
attachment 375008
[details]
Patch Clearing flags on attachment: 375008 Committed
r247912
: <
https://trac.webkit.org/changeset/247912
>
WebKit Commit Bot
Comment 4
2019-07-29 11:37:58 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug