Cherry-pick r247912. rdar://problem/53764200

REGRESSION (r246899): Subtitles show twice when controls show/hide on hulu.com
    https://bugs.webkit.org/show_bug.cgi?id=200187
    rdar://problem/53511121

    Reviewed by Zalan Bujtas.

    Source/WebCore:

    When a layer that painted into shared backing moved, we'd fail to repaint its old position
    because the RenderLayer's repaint rects are cleared via BackingSharingState::updateBeforeDescendantTraversal().

    Recomputing repaint rects is expensive, so we only want to do it when necessary, which is for
    layers that start and stop sharing (going into and out of compositing already recomputes them).
    So add logic to RenderLayerBacking::setBackingSharingLayers() that recomputes repaint rects
    on layers that will no longer use shared backing, and those that are newly using shared
    backing.

    Test: compositing/shared-backing/backing-sharing-repaint.html

    * rendering/RenderLayer.cpp:
    (WebCore::RenderLayer::setBackingProviderLayer):
    * rendering/RenderLayerBacking.cpp:
    (WebCore::RenderLayerBacking::setBackingSharingLayers):
    * rendering/RenderLayerCompositor.cpp:
    (WebCore::RenderLayerCompositor::BackingSharingState::appendSharingLayer):
    (WebCore::RenderLayerCompositor::updateBacking):

    LayoutTests:

    * compositing/shared-backing/backing-sharing-repaint-expected.html: Added.
    * compositing/shared-backing/backing-sharing-repaint.html: Added.

    Canonical link: https://commits.webkit.org/214025@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@247912 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/213666.148@safari-608-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-608-branch@248058 268f45cc-cd09-0410-ab3c-d52691b4dbfc